--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-select": "^2.1.3",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.3",
     "@radix-ui/react-toggle": "^1.1.0",
     "@sanity/color-input": "^3.1.1",
     "@sanity/image-url": "^1.0.2",
@@ -25,14 +27,16 @@
     "clsx": "^2.1.1",
     "embla-carousel-autoplay": "^8.1.6",
     "embla-carousel-react": "^8.1.6",
+    "jspdf": "^2.5.2",
     "lg-thumbnail": "^1.2.1",
     "lg-zoom": "^1.3.0",
     "lightgallery": "^2.7.2",
     "lucide-react": "^0.407.0",
+    "mongodb": "^6.12.0",
     "next": "14.2.5",
-    "next-auth": "^4.24.7",
     "next-sanity": "^9.4.2",
     "next-themes": "^0.3.0",
+    "nodemailer": "^6.9.16",
     "react": "^18",
     "react-color": "^2.19.3",
     "react-dom": "^18",
@@ -48,6 +52,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^18",
     "@types/react-color": "^3.0.12",
     "@types/react-dom": "^18",
